src/objects/BT_CO_ARMS_UpdateAccountBatchFile__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Debt_Exposure_Amount__c</fullName>
        <label>Approved Debt Exposure Amount</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Sector__c</fullName>
        <label>Business Sector</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCRID__c</fullName>
        <label>CCRID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_External__c</fullName>
        <label>Credit Limit External</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Limit_Internal__c</fullName>
        <label>Credit Limit Internal</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Term_Reference__c</fullName>
        <label>Credit Term Reference</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Term__c</fullName>
        <label>Credit Term</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debt__c</fullName>
        <label>Debt</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOA_Suppression_Indicator__c</fullName>
        <label>SOA Suppression Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoaGroup__c</fullName>
        <label>SoaGroup</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&apos;new&apos;</defaultValue>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transient_Indicator__c</fullName>
        <label>Transient Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Date__c</fullName>
        <label>Update Date</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_ID__c</fullName>
        <label>Update ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Time__c</fullName>
        <label>Update Time</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_ARMS_UpdateAccountBatchFile</label>
    <nameField>
        <label>BT_CO_ARMS_UpdateAccountBatchFile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_ARMS_UpdateAccountBatchFiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>